fix for centering image alignment

--- a/src/Components/ProjectsSection/ProjectsSection.module.css
+++ b/src/Components/ProjectsSection/ProjectsSection.module.css
@@ -71,6 +71,9 @@
 
     .imageContainer {
 
+        /* background-color: red; */
+        align-content: center;
+
 
         &:hover {
             transform: scale(1.02);
